# fqseek

./: README.md  meson.build
.circleci/: config.yml
src/: fq_reader.cpp  fq_reader.h  fqseek.code-workspace  fqseek.cpp  seq_scanner.cpp  seq_scanner.h  util.cpp  util.h
test/: test.fq  test_seq_scanner.cpp
